dfir_rs/tests/compile-fail-stable/surface_singleton_nostate_undefined.rs
../compile-fail/surface_singleton_nostate_undefined.rs